--- a/src/Exchange.Analyzers/Exchange.Analyzers.csproj
+++ b/src/Exchange.Analyzers/Exchange.Analyzers.csproj
@@ -29,6 +29,7 @@
     <PackageReference Include="MappingGenerator" Version="1.22.1.18" />
     <PackageReference Include="Microsoft.AspNetCore.Mvc.Analyzers" Version="2.2.0" />
     <PackageReference Include="SmartAnalyzers.CSharpExtensions.Annotations" Version="3.5.0" />
+    <PackageReference Include="SmartanAlyzers.ExceptionAnalyzer" Version="1.0.10" />
     <PackageReference Include="SmartAnalyzers.MultithreadingAnalyzer" Version="1.1.31" />
     <PackageReference Include="Microsoft.CodeAnalysis" Version="3.8.0" />
     <PackageReference Include="Microsoft.Net.Compilers" Version="3.8.0">
